# presunto-e-queijo

./: .gitignore  Cargo.toml  README.md  create-test-ns.sh  dos.sh  drop-test-ns.sh  start-in-ns.sh
src/: client.rs  lib.rs  main.rs  message.rs  peer_config.rs  peer_discovery.rs  ui.rs
src/ui/: backend.rs  mod.rs  views.rs
