[package]
name = "presunto-e-queijo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-stream = "0.3.5"
bytes = "1.4.0"
clap = { version = "4.2.4", features = ["derive"] }
cursive = { version = "0.20.0", features = ["crossterm-backend"] }
futures = "0.3.28"
futures-buffered = "0.2.4"
nom = "7.1.3"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
