[package]
name = "presunto-e-queijo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-stream = "0.3"
bytes = "1.7"
clap = { version = "4.5", features = ["derive"] }
console-subscriber = "0.4"
futures = "0.3"
futures-buffered = "0.2"
nom = "7"
thiserror = "1"
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
whoami = "1.5"

[target.'cfg(not(target_os = "linux"))'.dependencies]
cursive = { version = "0.21", features = ["crossterm-backend"] }

[target.'cfg(target_os = "linux")'.dependencies]
cursive = { version = "0.21", features = ["ncurses-backend"] }

[features]
default = ["peer-discovery"]
peer-discovery = []
